@@ -359,3 +359,8 @@ Added examples to docstring.
 
 *****
 
+Split cm.set_key() function into set() and help().
+Added examples to set() docstring.
+
+*****
+
